--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <title>GAME OF THRONES</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/portfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,9 +16,9 @@
 
 <body class="main">
     <div class="container">
-
+ <header class="site-header">
         <div class="row">
-            <header class="site-header">
+           
                 <div class="col-xs-3 col-sm-3 col-lg-6">
 
                     <img src="images/logo.jpg" class="logo" alt="GOT LOGO">
@@ -30,10 +30,10 @@
 
 
                 </div>
-            </header>
+           
 
         </div>
-
+</header>
         <div class="row">
             <div class="col-md-12">
 
