some minor canges

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-xs-9 col-sm-9 col-lg-6 text-right text-uppercase">
 
-                    <h1>GAME OF THRONES</h1>
+                    <h1 >GAME OF THRONES</h1>
 
 
                 </div>
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="col-md-12">
 
-                <h3 class="text-muted">FEATURED STORIES</h3>
+                <h2 class="text-muted">FEATURED STORIES</h2>
 
             </div>
 
@@ -94,21 +94,21 @@
             <div class="col-xs-6  col-md-4" id="pic1">
 
                 <img class="img-responsive " id="myimage" src="images/cersei.jpg" alt="Cersei lannister">
-                <h3>Cersei lannister</h3>
+                <h3 class="name">Cersei lannister</h3>
 
             </div>
 
             <div class="col-xs-6  col-md-4" id="pic2">
 
                 <img class="img-responsive " src="images/johnsnow.jpg" alt="JOHN SNOW">
-                <h3>JOHN SNOW</h3>
+                <h3 class="name">JOHN SNOW</h3>
 
             </div>
 
             <div class="col-xs-6  col-md-4" id="pic3">
 
                 <img class="img-responsive " src="images/targeryen.jpg" alt="daenerys targaryen">
-                <h3>Daenerys targaryen</h3>
+                <h3 class="name">Daenerys targaryen</h3>
 
             </div>
 
